--- a/html/galerijNoControl.html
+++ b/html/galerijNoControl.html
@@ -28,7 +28,7 @@
         <img src="../Image/Luchtfoto Dierenpark Planckendael_Internet.jpg" alt="Luchtfoto">
         <br>
         <br>
-        <audio autoplay loop>
+        <audio controls autoplay loop>
             <source src="../Audio/birds-singing-in-the-morning_nature-sound-146832.mp3" type="audio/mp3">
             Uw Browser ondersteund geen MP3 bestanden.
         </audio>
